# LandsatWebTracker

./: .editorconfig  .env.example  .gitignore  README.md  devcontainer.json  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  temp.json
backend/: database.py  main.py  pyproject.toml  settings.py  supabase.py
backend/assets/email/: template.html
backend/classes/: LandSatAPI.py  LandSatData.py  LandsatAPI.py  __init__.py
backend/domain_types/: __init__.py
backend/entities/: BBox.py  BorderBox.py  LandsatAPI.py  LandsatData.py  __init__.py
backend/middleware/: __init__.py  logger_middleware.py
backend/models/: __init__.py  pixel_watch.py  report.py  user.py
backend/routers/: __init__.py  auth_router.py  coordinates_router.py  index_router.py  landsat_api_router.py  report_router.py  reports_router.py  watch_my_pixel.py
backend/schemas/: __init__.py  landsat_api.py  landsat_base_api.py  landsat_sr_api.py  user.py
backend/schemas/enums/: mosaic_type.py
backend/schemas/landsat/: landsat_api.py  landsat_api_by_id.py  landsat_api_by_id_advanced.py  landsat_api_by_search.py  landsat_item.py  landsat_item_advanced.py
backend/schemas/structures/: acquisitions.py  border_box.py  cloud_coverage_ratio.py  coordinates.py  download_options.py  download_request.py  download_retrieve.py  landsat_item.py  matrix.py  matrix_reflectance.py  matrix_temperature.py  pixel_watch.py  polygon.py  reflectance_matrix.py  report.py  report_result.py  satellite.py  tile_attributes.py  user.py  wmp_params.py  wrs_coordinates.py
backend/services/: NotificationService.py  ReportGeneratorService.py  __init__.py  supabase.py
backend/src/: main.py
backend/src/classes/: LandSatAPI.py  LandSatData.py  __init__.py
backend/src/middleware/: __init__.py  logger_middleware.py
backend/src/routers/: __init__.py  coordinates_router.py  index_router.py
backend/src/services/: NotificationService.py  ReportGeneratorService.py  __init__.py
backend/src/tools/: WRS2Tools.py  __init__.py
backend/src/types/: __init__.py
backend/tasks/: write_report.py
backend/tools/: WRS2Tools.py  __init__.py
backend/types/: __init__.py
backend/utils/: GeoLocationUtils.py  __init__.py  acquisitions_utils.py  auth.py  geo_location_utils.py  polygon_utils.py  reflectance_chart_utils.py  temperature_chart_utils.py  utils.py
frontend/: app.vue  components.json  error.vue  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts
patches/: @nuxtjs__supabase.patch
(+139 files in other folders)
